--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -948,7 +948,7 @@ call-to-action .button {
 
 /* contact form */
 
-#contact form { margin-bottom: 30px; }
+#contact form { margin-bottom: 20px; }
 #contact label {
    font: 15px/24px 'opensans-bold', sans-serif;
    margin: 12px 0;
@@ -957,13 +957,17 @@ call-to-action .button {
 	/* float: left; */
    width: 26%;
 }
+#contact form.contactus-input-box {
+   display: flex;
+   justify-content: space-between;
+}
 #contact input,
 #contact textarea,
 #contact select {
    padding: 18px 20px;
 	color: #eee;
 	background: #373233;
-	margin-bottom: 42px;
+	margin-bottom: 20px;
 	border: 0;
 	outline: none;
    font-size: 15px;
@@ -973,8 +977,15 @@ call-to-action .button {
 #contact input:focus,
 #contact textarea:focus,
 #contact select:focus {
-	color: #fff;
-	background-color: #f06000;
+	color: #292929;
+	background-color: #f1c1a2;
+}
+#contact .field .error-txt {
+   font-size: 14px;
+   color: #f06000;
+   text-align: left;
+   margin: -20px 0 10px;
+   display: none;
 }
 #contact button.submit {
 	text-transform: uppercase;
