--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -119,6 +119,21 @@ header .scrolldown a {
 }
 header .scrolldown a:hover { color: #f06000; }
 
+header .profile-pic {
+   position: absolute;
+   display: flex;
+   flex-direction: row;
+   height: 48px;
+   width: 48px;
+   font-size: 42px;
+   margin: 7px 0 0 30px;
+
+   -webkit-transition: all .3s ease-in-out;
+   -moz-transition: all .3s ease-in-out;
+   -o-transition: all .3s ease-in-out;
+   transition: all .3s ease-in-out;
+}
+
 /* primary navigation
 --------------------------------------------------------------------- */
 #nav-wrap ul, #nav-wrap li, #nav-wrap a {
@@ -146,11 +161,12 @@ header .scrolldown a:hover { color: #f06000; }
 #nav-wrap > a.mobile-btn { display: none; }
 
 ul#nav {
-   min-height: 48px;
+   min-height: 60px;
    width: auto;
+   margin-right: 70px;
 
    /* center align the menu */
-   text-align: center;
+   text-align: right;
 }
 ul#nav li {
    position: relative;
@@ -165,7 +181,7 @@ ul#nav li a {
 /* 8px padding top + 8px padding bottom + 32px line-height = 48px */
 
    display: inline-block;
-   padding: 8px 13px;
+   padding: 14px 13px;
    line-height: 32px;
 	text-decoration: none;
    text-align: left;
