--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -359,7 +359,7 @@ ul#nav li.current a { color: #F06000; }
 #resume .header-col { padding-top: 9px; }
 #resume .main-col { padding-right: 10%; }
 
-.education, .work {
+.education, .work, .certification, .skill{
    margin-bottom: 48px;
    padding-bottom: 24px;
    border-bottom: 1px solid #E8E8E8;
@@ -429,24 +429,6 @@ ul#nav li.current a { color: #F06000; }
    border-radius: 3px 0 0 3px;
 }
 
-.photoshop {
-  	width: 60%;
-  	/* -moz-animation: photoshop 2s ease; */
-  	-webkit-animation: photoshop 2s ease;
-  	animation: photoshop 2s ease;
-}
-.illustrator {
-  	width: 55%;
-  	/* -moz-animation: illustrator 2s ease; */
-  	-webkit-animation: illustrator 2s ease;
-  	animation: illustrator 2s ease;
-}
-.wordpress {
-  	width: 50%;
-  	/* -moz-animation: wordpress 2s ease; */
-  	-webkit-animation: wordpress 2s ease;
-  	animation: wordpress 2s ease;
-}
 .css {
   	width: 90%;
   	/* -moz-animation: css 2s ease; */
@@ -459,8 +441,14 @@ ul#nav li.current a { color: #F06000; }
   	-webkit-animation: html5 2s ease;
   	animation: html5 2s ease;
 }
-.jquery {
-  	width: 50%;
+.reactjs {
+  	width: 90%;
+  	/* -moz-animation: jquery 2s ease; */
+  	-webkit-animation: jquery 2s ease;
+  	animation: jquery 2s ease;
+}
+.nodejs {
+  	width: 80%;
   	/* -moz-animation: jquery 2s ease; */
   	-webkit-animation: jquery 2s ease;
   	animation: jquery 2s ease;
