--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -250,6 +250,7 @@ ul#nav li.current a { color: #F06000; }
 #about button.learn-more {
    width: 200px;
    height: auto;
+   /* Intentionally setting background and color to transparent */
    background: transparent;
    color: transparent;
    padding: 0;
@@ -385,6 +386,90 @@ ul#nav li.current a { color: #F06000; }
    list-style-position: outside;
 }
 
+#resume .download-button {
+   position: fixed;
+   left: 40px;
+   top: 50%;
+   transform: translateY(-50%);
+   width: 200px;
+   height: auto;
+   background: transparent;
+   color: transparent;
+   padding: 0;
+   border: none;
+   cursor: pointer;
+   z-index: 1000;
+ }
+ 
+ #resume .download-button .circle {
+   transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+   position: relative;
+   display: block;
+   margin: 0;
+   width: 50px;
+   height: 50px;
+   background: #e98644;
+   border-radius: 10rem;
+ }
+ 
+ #resume .download-button .circle .icon {
+   transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+   position: absolute;
+   top: 0;
+   bottom: 0;
+   margin: auto;
+   background: #fff;
+ }
+ 
+ #resume .download-button .circle .icon.arrow {
+   transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+   left: 15px;
+   width: 1.125rem;
+   height: 0.125rem;
+   background: none;
+ }
+ 
+ #resume .download-button .circle .icon.arrow::before {
+   position: absolute;
+   content: '';
+   top: -0.25rem;
+   right: 0.0625rem;
+   width: 0.625rem;
+   height: 0.625rem;
+   border-top: 0.125rem solid #fff;
+   border-right: 0.125rem solid #fff;
+   transform: rotate(45deg);
+ }
+ 
+ #resume .download-button .button-text {
+   transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+   position: absolute;
+   top: 0;
+   left: 30px;
+   right: 10px;
+   bottom: 0;
+   /* padding-top: 12px; */
+   margin: 0;
+   color: #e98644;
+   font-weight: 700;
+   line-height: 1.6;
+   text-align: center;
+   text-transform: uppercase;
+ }
+ 
+ #resume .download-button:hover .circle {
+   width: 100%;
+   background-color: #f06000;
+ }
+ 
+ #resume .download-button:hover .circle .icon.arrow {
+   background: #fff;
+   transform: translate(1rem, 0);
+ }
+ 
+ #resume .download-button:hover .button-text {
+   color: #fff;
+ }
 /*----------------------------------------------*/
 /*	Skill Bars
 /*----------------------------------------------*/
